[add layoute/chats(show)]

--- a/app/assets/stylesheets/chats.scss
+++ b/app/assets/stylesheets/chats.scss
@@ -2,15 +2,21 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-// .message {
-//   width: 60% ;
-// }
+.my_message {
+  margin-left: 20% ;
+}
 
-// .my_message {
-//   width: 60% ;
-// }
+.partner_message {
+  margin-right: 20% ;
+}
 
 
-// .partner_message {
-//   width: 60% ;
-// }
+.sent_time {
+  font-size: 12px;
+}
+
+.text_message {
+  word-break: break-all;
+  // white-space: pre-wrap;
+  // text-indent:0px;
+}
