--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -86,7 +86,7 @@
               <% end %>
 
               <div>
-                <div class="card_item1 d-flex pl-2 pt-2">
+                <div class="card_item1 d-flex justify-content-end pt-2 px-3">
                   <div class="pl-2 card_item2">
                     コメント件数：<%= link_to content.comments.count, content_comments_path(content.id) %>
                   </div>
@@ -131,7 +131,7 @@
               <% end %>
 
               <div>
-                <div class="card_item1 d-flex pl-2 pt-2">
+                <div class="card_item1 d-flex justify-content-end pt-2 px-3">
                   <div class="pl-2 card_item2">
                     コメント件数：<%= link_to content.comments.count, content_comments_path(content.id) %>
                   </div>
