--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -75,7 +75,7 @@ a:hover{
 // cardマウスホバー時のシャドー等
 
 .card {
-  border: none !important;
+  // border: none !important;
   background-color: transparent;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.2s ease-out, transform 0.2s ease-out;
