[fix layoute/contents(show)]

--- a/app/views/chats/create.js.erb
+++ b/app/views/chats/create.js.erb
@@ -1,2 +1,2 @@
 $(".message").prepend("<%= j(render partial: 'chats/message', locals: {chat: @chat}) %>")
-$('input[type=text]').val('')
+$('textarea').val('')
