--- a/app/views/chats/_message.html.erb
+++ b/app/views/chats/_message.html.erb
@@ -9,10 +9,12 @@
           <div class="time_date"><%= chat.created_at %></div>
         </div>
       </div>
-      
+      <div class="d-flex align-content-center">
+        <div class=" card_item1">
+          <%= attachment_image_tag chat.user, :profile_image, :fill, 200, 200, format: 'jpg', fallback: "0.jpeg", class: "user-image", style: "border-style: none;" %>
+        </div>
+      </div>
     </div>
-
-    
 
   <% else %>
 
