[fix layoute/users(show)]

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,7 @@
 
       <h3><%= @user.name %></h3>
 
-      <div class="mx-5 mb-2 px-5 py-3 card"><%= @user.introduction %></div>
+      <div class="user_introduction mb-2 py-3 card"><%= @user.introduction %></div>
 
       <div class="following">
         フォロー数：
