--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -35,10 +35,24 @@
    transform: translateY(-2px);
  }
 
- // ----------------------------
+// ----------------------------
 // 編集フォーム用
 
  .edit_items {
    width: 40%;
    margin: auto;
  }
+
+// ----------------------------
+// introduction の幅調整
+
+ .user_introduction {
+   width: 50%;
+   margin: 0 auto;
+ }
+
+
+// .profile_image_1 {
+//   width: 10%;
+//   margin: 0 auto;
+// }
