--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    
+
     <div class="col-2 text-center">
       <div class="side_left">
         <%= link_to new_content_path do %>
@@ -14,25 +14,25 @@
 
     <div class="col-8">
       <div class="text-center">
-        
+
         <h1 class="mb-5">Favorites</h1>
         <% @content.favorites.each do |favo| %>
-          <div class="card d-flex flex-row justify-content-between align-items-center mb-3">
-            
-            <%= link_to user_path(favo.user.id), class: 'd-flex flex-row' do %>
+          <div class="card flex-row justify-content-between align-items-center mb-3">
+
+            <%= link_to user_path(favo.user.id) do %>
               <div class="p-2 ml-3">
                 <%= attachment_image_tag favo.user, :profile_image, :fill, 200, 200, format: 'jpg', fallback: "0.jpeg", class: "user-image", style: "border-style: none;" %>
               </div>
             <% end %>
-            
+
             <div class="p-2">
               <%= favo.user.name %>
             </div>
-            
+
             <div class="p-2">
               <%= favo.user.greeting %>
             </div>
-            
+
             <div class="p-2 mr-3">
               <% if current_user != favo.user %>
                 <% if favo.user.followed_by?(current_user) %>
@@ -42,12 +42,12 @@
                 <% end %>
               <% end %>
             </div>
- 
- 
-            
+
+
+
           </div>
         <% end %>
-          
+
       </div>
     </div>
 
