--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,9 +17,9 @@
 
         <h1 class="mb-5">Users</h1>
         <% @users.each do |user| %>
-          <div class="card d-flex flex-row justify-content-between align-items-center mb-3">
+          <div class="card flex-row justify-content-between align-items-center mb-3">
 
-            <%= link_to user_path(user.id), class: 'd-flex flex-row' do %>
+            <%= link_to user_path(user.id) do %>
               <div class="p-2 ml-3">
                 <%= attachment_image_tag user, :profile_image, :fill, 200, 200, format: 'jpg', fallback: "0.jpeg", class: "user-image", style: "border-style: none;" %>
               </div>
