--- a/app/views/contents/show.html.erb
+++ b/app/views/contents/show.html.erb
@@ -18,42 +18,41 @@
         <h1 class="mb-5">Content Show</h1>
 
         <div>
-            <div class="card_item1 pt-2 justify-content-center">
-              <%= link_to user_path(@content.user.id) do %>
-                <%= attachment_image_tag @content.user, :profile_image, :fill, 200, 200, format: 'jpg', fallback: "0.jpeg", class: "user-image", style: "border-style: none;" %>
-              <% end %>
+          <div class="justify-content-center pt-2">
+            <%= link_to user_path(@content.user.id) do %>
+              <%= attachment_image_tag @content.user, :profile_image, :fill, 200, 200, format: 'jpg', fallback: "0.jpeg", class: "user-image", style: "border-style: none;" %>
+            <% end %>
 
-              <h3 class="mb-3">
-                <%= @content.user.name %>
-              </h3>
+            <h3 class="mb-3">
+              <%= @content.user.name %>
+            </h3>
 
-              <div class="content_action mb-3">
-                <div>
-                  <% if current_user != @content.user %>
-                    <% if @content.user.followed_by?(current_user) %>
-                      <%= link_to "フォロー解除", user_relationships_path(@content.user.id), method: :delete, class: "btn btn-outline-secondary w-100" %>
-                    <% else %>
-                      <%= link_to "フォローする", user_relationships_path(@content.user.id), method: :post, class: "btn btn-info w-100" %>
-                    <% end %>
+            <div class="content_action mb-3">
+              <div>
+                <% if current_user != @content.user %>
+                  <% if @content.user.followed_by?(current_user) %>
+                    <%= link_to "フォロー解除", user_relationships_path(@content.user.id), method: :delete, class: "btn btn-outline-secondary w-100" %>
+                  <% else %>
+                    <%= link_to "フォローする", user_relationships_path(@content.user.id), method: :post, class: "btn btn-info w-100" %>
                   <% end %>
-                </div>
+                <% end %>
               </div>
-
             </div>
-          </div>
 
+          </div>
+        </div>
 
 
         <div class="card mb-5 pb-3">
 
           <div>
             <%= attachment_image_tag @content, :content_image, :fill, 800, 500, format: 'jpg', class: "content-image" %>
-            <div class="card_item1 d-flex pl-2 pt-2">
-                <div class="pl-2 card_item2">
+            <div class="d-flex pl-2 pt-2">
+                <div class="pl-2">
                   コメント件数：<%= link_to @content.comments.count, content_comments_path(@content.id) %>
                 </div>
 
-                <div class="pl-5 pr-2 card_item2 favorite_buttons_<%= @content.id %>">
+                <div class="pl-5 pr-2 favorite_buttons_<%= @content.id %>">
                   <%= render 'favorites/favorite',content: @content %>
                 </div>
               </div>
@@ -83,10 +82,7 @@
             <% end %>
           </div>
 
-
         </div>
-
-
 
       </div>
     </div>
