--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -18,14 +18,12 @@
         <h1 class="mb-5">Users</h1>
 
 
-        <div class="p-2">
+        <div>
           <%= attachment_image_tag @user, :profile_image, :fill, 300, 300, format: 'jpg', fallback: "0.jpeg", class: "user-image2", style: "border-style: none;", id: "preview_image" %>
         </div>
 
         <%= form_with model:@user, local:true do |f| %>
-
-
-        <div class="mb-2">Image</div>
+        <div class="my-2">Image</div>
         <div class="card mb-5 custom-file">
           <label class="custom-file-label" for="customFile">画像を選択...</label>
           <%= f.attachment_field :profile_image,class: "custom-file-input"  %>
