--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -9,16 +9,7 @@
   
   <div class="row">
 
-    <div class="col-1 text-center">
-      <div class="side_left">
-        <%= link_to new_content_path do %>
-        <i class="far fa-plus-square fa-3x"></i>
-        <% end %>
-      </div>
-    </div>
-
-
-
+    <div class="col-1"></div>
     <div class="col-10">
 
       <%= form_with model: @chat do |f| %>
@@ -39,23 +30,20 @@
       <div><%= paginate @chats %></div>
 
     </div>
-
-
-
-    <div class="side_right col-1 text-center">
-      <span id="back">
-        <a href="#">
-          <i class="fas fa-angle-double-up fa-3x mr-3"></i>
-        </a>
-      </span>
-    </div>
+    <div class="col-1r"></div>
 
   </div>
 
   <div class="container-fluid">
     <div class="row">
 
-      <div class="col-1"></div>
+      <div class="col-1 pl-0">
+        <div class="side_left">
+          <%= link_to new_content_path do %>
+          <i class="far fa-plus-square fa-3x"></i>
+          <% end %>
+        </div>
+      </div>
 
         <div class="col-10 px-0">
           <div class="message mb-5">
@@ -66,7 +54,13 @@
           </div>
         </div>
 
-      <div class="col-1"></div>
+      <div class="col-1">
+        <span id="back">
+          <a href="#">
+            <i class="fas fa-angle-double-up fa-3x mr-3"></i>
+          </a>
+        </span>
+      </div>
 
     </div>
   </div>
