--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -31,7 +31,7 @@
             <div class="d-flex flex-row">
               <%= link_to user_path(content.user.id) do %>
                 <div class="p-2">
-                  <%= attachment_image_tag content.user, :profile_image, :fill, 200, 200, format: 'jpg', fallback: "0.jpeg", class: "user-image", style: "border-style: none;" %>
+                  <%= attachment_image_tag content.user, :profile_image, :fill, 200, 200, format: 'jpg', fallback: "test_images/0.jpg", class: "user-image", style: "border-style: none;" %>
                 </div>
               <% end %>
 
@@ -74,7 +74,7 @@
             <div class="d-flex flex-row">
               <%= link_to user_path(content.user.id) do %>
                 <div class="p-2">
-                  <%= attachment_image_tag content.user, :profile_image, :fill, 200, 200, format: 'jpg', fallback: "0.jpeg", class: "user-image", style: "border-style: none;" %>
+                  <%= attachment_image_tag content.user, :profile_image, :fill, 200, 200, format: 'jpg', fallback: "test_images/0.jpg", class: "user-image", style: "border-style: none;" %>
                 </div>
               <% end %>
 
