--- a/app/views/contents/show.html.erb
+++ b/app/views/contents/show.html.erb
@@ -20,7 +20,7 @@
         <div>
           <div class="justify-content-center pt-2">
             <%= link_to user_path(@content.user.id) do %>
-              <%= attachment_image_tag @content.user, :profile_image, :fill, 200, 200, format: 'jpg', fallback: "0.jpeg", class: "user-image", style: "border-style: none;" %>
+              <%= attachment_image_tag @content.user, :profile_image, :fill, 200, 200, format: 'jpg', fallback: "test_images/0.jpg", class: "user-image", style: "border-style: none;" %>
             <% end %>
 
             <h3 class="mb-3">
