--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -30,7 +30,7 @@
       <div><%= paginate @chats %></div>
 
     </div>
-    <div class="col-1r"></div>
+    <div class="col-1"></div>
 
   </div>
 
