--- a/app/views/comments/_c_comment.erb
+++ b/app/views/comments/_c_comment.erb
@@ -12,7 +12,7 @@
     </div>
 
     <div class="card p-2 m-2">
-      <%= c_comment.comment %>
+      <%= simple_format(c_comment.comment) %>
     </div>
 
     <div class="p-2 mr-3">
