--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -6,7 +6,7 @@
 
   <div class="row">
 
-    <div class="col-1 text-center">
+    <div class="col-1">
       <div class="side_left">
         <%= link_to new_content_path do %>
         <i class="far fa-plus-square fa-3x"></i>
@@ -32,7 +32,7 @@
 
           <div class="comment-form">
           <%= form_with(model:[@content, @c_comment], remote: true) do |f| %>
-            <%= f.text_area :comment, size: "10x7",placeholder: "コメントをここに", class: "form-control" %>
+            <%= f.text_area :comment, size: "10x7",placeholder: "コメント（MAX:1000）", class: "form-control" %>
             <%= f.submit "送信する", class: "mt-3 w-100 btn btn-outline-info" %>
           <% end %>
           </div>
@@ -43,7 +43,7 @@
 
 
 
-    <div class="side_right col-1 text-center">
+    <div class="side_right col-1">
       <span id="back">
         <a href="#">
           <i class="fas fa-angle-double-up fa-3x"></i>
