--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -6,7 +6,7 @@
 
   <div class="row">
 
-    <div class="col-1 text-center">
+    <div class="col-1">
       <div class="side_left">
         <%= link_to new_content_path do %>
         <i class="far fa-plus-square fa-3x"></i>
@@ -105,7 +105,7 @@
 
 
 
-    <div class="side_right col-1 text-center">
+    <div class="side_right col-1">
       <span id="back">
         <a href="#">
           <i class="fas fa-angle-double-up fa-3x"></i>
