--- a/app/views/contents/show.html.erb
+++ b/app/views/contents/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
 
-    <div class="col-1 text-center">
+    <div class="col-1">
       <div class="side_left">
         <%= link_to new_content_path do %>
         <i class="far fa-plus-square fa-3x"></i>
@@ -29,7 +29,7 @@
 
             <div class="content_action mb-3">
               <div>
-                <% if current_user != @content.user %>
+                <% if user_signed_in? && current_user != @content.user %>
                   <% if @content.user.followed_by?(current_user) %>
                     <%= link_to "フォロー解除", user_relationships_path(@content.user.id), method: :delete, class: "btn btn-outline-secondary w-100" %>
                   <% else %>
@@ -48,19 +48,19 @@
           <div>
             <%= attachment_image_tag @content, :content_image, :fill, 800, 500, format: 'jpg', class: "content-image" %>
             <div class="d-flex pl-2 pt-2">
-                <div class="pl-2">
-                  コメント件数：<%= link_to @content.comments.count, content_comments_path(@content.id) %>
-                </div>
-
-                <div class="pl-5 pr-2 favorite_buttons_<%= @content.id %>">
-                  <%= render 'favorites/favorite',content: @content %>
-                </div>
+              <div class="pl-2">
+                コメント件数：<%= link_to @content.comments.count, content_comments_path(@content.id) %>
               </div>
+
+              <div class="pl-5 pr-2 favorite_buttons_<%= @content.id %>">
+                <%= render 'favorites/favorite',content: @content %>
+              </div>
+            </div>
           </div>
 
-          <div class="card mx-5 mb-3 px-3 py-2">
-            <div class="px-2">
-              <%= @content.description %>
+          <div class="card mx-5 my-3 px-3 py-2">
+            <div class="text_start px-2">
+              <%= simple_format(@content.description) %>
             </div>
           </div>
 
@@ -71,15 +71,15 @@
           </div>
 
           <div class="content_action">
-            <% if current_user.id == @content.user_id %>
-            <div>
-              <%= link_to "変更する", edit_content_path(@content), class: "btn btn-outline-info w-100" %>
-            </div>
+            <% if user_signed_in? && current_user.id == @content.user_id %>
+              <div>
+                <%= link_to "変更する", edit_content_path(@content), class: "btn btn-outline-info w-100" %>
+              </div>
 
-            <div class="mt-2">
-              <%= link_to "削除する", content_path, class: "btn btn-outline-secondary w-100", method: :delete, data: { confirm: '本当に削除しますか？' } %>
-            </div>
-            <% end %>
+              <div class="mt-2">
+                <%= link_to "削除する", content_path, class: "btn btn-outline-secondary w-100", method: :delete, data: { confirm: '本当に削除しますか？' } %>
+              </div>
+              <% end %>
           </div>
 
         </div>
@@ -90,7 +90,7 @@
 
 
 
-    <div class="side_right col-1 text-center">
+    <div class="side_right col-1">
       <span id="back">
         <a href="#">
           <i class="fas fa-angle-double-up fa-3x mr-3"></i>
