--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
 
-    <div class="col-2 text-center">
+    <div class="col-2">
       <div class="side_left">
         <%= link_to new_content_path do %>
         <i class="far fa-plus-square fa-3x"></i>
@@ -54,7 +54,7 @@
 
 
 
-    <div class="side_right col-2 text-center">
+    <div class="side_right col-2">
       <span id="back">
         <a href="#">
           <i class="fas fa-angle-double-up fa-3x"></i>
