--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
 
-    <div class="col-1 text-center">
+    <div class="col-2">
       <div class="side_left">
         <%= link_to new_content_path do %>
         <i class="far fa-plus-square fa-3x"></i>
@@ -12,7 +12,7 @@
 
 
 
-    <div class="col-10">
+    <div class="col-8">
       <div class="text-center">
 
         <h1 class="mb-5">Users</h1>
@@ -33,7 +33,7 @@
               <%= user.greeting %>
             </div>
 
-            <div class="p-2 mr-3">
+            <div class="p-2 pr-4">
               <% if current_user != user %>
                 <% if user.followed_by?(current_user) %>
                   <%= link_to "フォロー解除", user_relationships_path(user.id), method: :delete, class: "btn btn-outline-secondary" %>
@@ -52,7 +52,7 @@
 
 
 
-    <div class="side_right col-1 text-center">
+    <div class="side_right col-2">
       <span id="back">
         <a href="#">
           <i class="fas fa-angle-double-up fa-3x mr-3"></i>
